<resources>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Log in</string>
    <string name="carpool">Carpool</string>
    <string name="app_name">Carpool</string>
    <string name="signup">Sign up</string>
    <string name="enter_city">Geef je huidige plaats in</string>
    <string name="continue_text">continue</string>
    <string name="sign_up_as_pooler">geef je op als pooler</string>
    <string name="find_pooler">vind een pooler in de buurt</string>
    <string name="sign_up_as_pooler_start_city_text">geef start stad in</string>
    <string name="sign_up_as_pooler_end_city_text">geef je eindbestemming in (stad en adres)</string>
    <string name="sign_up_as_pooler_end_address_input">eind adres</string>
    <string name="find_pooler_adres">geef je huidige plaats in</string>
    <string name="find_pooler_adres_input">adres</string>
    <string name="find_pooler_end_adres_text">geef je bestemming in</string>
    <string name="find_pooler_pooler_end_city_text">stad bestemming van pooler : %1$s</string>
    <string name="find_pooler_pooler_end_address_text">bestemming van pooler : %1$s</string>
    <string name="find_pooler_pooler_start_city_text">start stad van pooler : %1$s</string>
    <string name="find_pooler_list_top_text">klik op de pooler die je wilt</string>
    <string name="see_requests_text">zie verzoeken om te poolen</string>
    <string name="choose_request_text">klik op verzoek dat je wilt bekijken</string>
    <string name="see_requests_offline">Zie de geaccepteerde verzoeken (offline)</string>
    <string name="see_accepted_drives">Zie de geaccepteerde verzoeken (online)</string>
    <string name="finished_drive_text">Rit beëindigen?</string>
    <string name="email_requested_drive_detail">email van verzoeker : %1$s</string>
    <string name="start_city_requested_drive_detail">stad waar de rit begint : %1$s</string>
    <string name="start_address_requested_drive_detail">adres waar de rit begint : %1$s</string>
    <string name="end_city_requested_drive_detail">stad waar de rit eindigt : %1$s</string>
    <string name="end_address_requested_drive_detail">adres waar de rit eindigt : %1$s</string>
    <string name="requester_uid_request_drive_detail">id van de verzoeker : %1$s</string>
    <string name="pooler_uid_request_drive_detail">id van uzelf : %1$s</string>
    <string name="find_pooler_pooler_start_address_text">begin adres van pooler : %1$s</string>
    <string name="find_pooler_ispooler">is een pooler : %1$s</string>
    <string name="top_text_online_drives">klik op een drive om de details te bekijken</string>
    <string name="top_text_offline_drives">Hier zie je je geaccepteerde drives (offline)</string>
</resources>