<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ecf7f9">
        <ImageView
            android:id="@+id/CarpoolImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/car"/>
        <TextView
            android:layout_below="@+id/CarpoolImage"
            android:id="@+id/CarpoolText"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/carpool"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="40sp"
            android:textColor="#0f52ba"
            />
        <EditText
            android:inputType="text"
            android:id="@+id/UsernameInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/PasswordInput"
            android:hint="@string/email"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/PasswordInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/LogInButton"
            android:hint="@string/password"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>
        <Button
            android:id="@+id/LogInButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:background="#b0e0e6"/>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
