<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/signUpEmailInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/signUpPasswordInput"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <EditText
            android:id="@+id/signUpPasswordInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/signUpButton"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:text="@string/signup"
            android:textColor="@android:color/black"
            android:background="#b0e0e6"
            android:onClick="handleClickSignUpFragment"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>