<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ecf7f9">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/signupPoolerStartCityText"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up_as_pooler_start_city_text"
            android:layout_alignParentTop="true"
            android:layout_marginTop="70dp"
            android:textColor="#0f52ba"
            android:textSize="35sp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <fragment
            android:id="@+id/cityPickerSignUpPoolerStartCity"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:name="com.example.carpool.CityPickerFragment"
            tools:layout="@layout/fragment_citypicker"
            android:layout_below="@+id/signupPoolerStartCityText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>
        <TextView
            android:id="@+id/signupPoolerEndCityText"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up_as_pooler_end_city_text"
            android:layout_below="@+id/cityPickerSignUpPoolerStartCity"
            android:layout_marginTop="50dp"
            android:textColor="#0f52ba"
            android:textSize="35sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>
        <fragment
            android:id="@+id/signupPoolerEndCity"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:name="com.example.carpool.CityPickerFragment"
            tools:layout="@layout/fragment_citypicker"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/signupPoolerEndCityText"/>
        <EditText
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:hint="@string/sign_up_as_pooler_end_address_input"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/signupPoolerEndCity"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>