<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ecf7f9">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
        android:id="@+id/findPoolerStartCityText"
        android:layout_width="400dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:text="@string/find_pooler_adres"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:textColor="#0f52ba"
        android:textSize="35sp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

        <fragment
            android:id="@+id/cityPickerFindPoolerFragment"
            android:layout_width="400dp"
            android:layout_height="80dp"
            tools:layout="@layout/fragment_citypicker"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/findPoolerStartCityText"
            android:layout_marginTop="30dp"/>
        <EditText
            android:id="@+id/findPoolerStartAdres"
            android:layout_width="400dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:hint="@string/find_pooler_adres_input"
            android:layout_below="@+id/cityPickerFindPoolerFragment"
            android:layout_marginTop="50dp"
            />
        <TextView
            android:id="@+id/findPoolerEndAddressText"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:text="@string/find_pooler_end_adres_text"
            android:layout_marginTop="50dp"
            android:textColor="#0f52ba"
            android:textSize="35sp"
            android:layout_below="@+id/findPoolerStartAdres"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <fragment
            android:id="@+id/findPoolerCityPickerEndCity"
            android:layout_width="400dp"
            android:layout_height="80dp"
            tools:layout="@layout/fragment_citypicker"
            android:layout_below="@+id/findPoolerEndAddressText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>
        <EditText
            android:id="@+id/findPoolerEndAddress"
            android:layout_width="400dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:hint="@string/find_pooler_adres_input"
            android:layout_below="@+id/findPoolerCityPickerEndCity"
            android:layout_marginTop="50dp"
            />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>